[gd_scene load_steps=20 format=3 uid="uid://dwam8qve7q2or"]

[ext_resource type="Script" path="res://scripts/LevelEnd.gd" id="1_o4t2j"]
[ext_resource type="Texture2D" uid="uid://btf4c065nm757" path="res://images/ui/level-cleared/Level Cleared.png" id="1_ura5o"]
[ext_resource type="Texture2D" uid="uid://do3teybhwpnbb" path="res://images/ui/level-cleared/Stars-Sheet.png" id="2_a5ame"]
[ext_resource type="Texture2D" uid="uid://bguei2u46h8mg" path="res://images/ui/Menu Button-Sheet.png" id="3_g0a2o"]
[ext_resource type="Texture2D" uid="uid://dmnw4mf4wxej4" path="res://images/ui/level-cleared/Replay Button-Sheet.png" id="4_486dc"]
[ext_resource type="Texture2D" uid="uid://bvprdb0pki4qj" path="res://images/ui/level-cleared/Next Level Button-Sheet.png" id="5_56f7j"]
[ext_resource type="Texture2D" uid="uid://jfkoq1gm2xp6" path="res://images/ui/level-cleared/Ad-Sheet.png" id="6_2rd6r"]
[ext_resource type="PackedScene" uid="uid://h02e1k5ypoef" path="res://scenes/StaticTimeDisplay.tscn" id="8_ca4y2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxrt2"]
bg_color = Color(0.0117647, 0.0509804, 0.00784314, 0.807843)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmpmk"]
atlas = ExtResource("2_a5ame")
region = Rect2(0, 0, 160, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3t37"]
atlas = ExtResource("3_g0a2o")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_chipl"]
atlas = ExtResource("3_g0a2o")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxj5k"]
atlas = ExtResource("4_486dc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_chcv8"]
atlas = ExtResource("4_486dc")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6sa6"]
atlas = ExtResource("5_56f7j")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfshn"]
atlas = ExtResource("5_56f7j")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mori0"]
atlas = ExtResource("5_56f7j")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0ye6"]
atlas = ExtResource("6_2rd6r")
region = Rect2(10, 16, 325, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pkql"]
atlas = ExtResource("6_2rd6r")
region = Rect2(362, 16, 325, 48)

[node name="LevelEnd" type="PanelContainer"]
z_index = 999
offset_right = 640.0
offset_bottom = 360.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cxrt2")
script = ExtResource("1_o4t2j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="LevelFinishTexture" type="TextureRect" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
texture = ExtResource("1_ura5o")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StarsTexture" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = SubResource("AtlasTexture_xmpmk")
stretch_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MenuButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_j3t37")
texture_pressed = SubResource("AtlasTexture_chipl")

[node name="ReplayButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_hxj5k")
texture_pressed = SubResource("AtlasTexture_chcv8")

[node name="NextLevelButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_b6sa6")
texture_pressed = SubResource("AtlasTexture_rfshn")
texture_disabled = SubResource("AtlasTexture_mori0")

[node name="AdContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AdButton" type="TextureButton" parent="VBoxContainer/AdContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_n0ye6")
texture_pressed = SubResource("AtlasTexture_4pkql")

[node name="TimeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StaticTimeDisplay" parent="VBoxContainer/TimeContainer" instance=ExtResource("8_ca4y2")]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AdContainer/AdButton" to="." method="_on_ad_button_pressed"]
